[package]
name = "symbios-genetics"
version = "0.1.0"
edition = "2024"
authors = ["Janus"]
description = "Sovereign biology engine for Quality-Diversity and Multi-Objective evolution."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/symbios-genetics"
keywords = [
    "simulation",
    "evolutionary-algorithms",
    "quality-diversity",
    "multi-objective-optimization",
    "genetic-algorithms",
]
categories = ["simulation", "algorithms", "biology"]

[dependencies]
rand = { version = "0.9", features = ["small_rng"] }
rand_pcg = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
