[package]
name = "symbios-genetics"
version = "0.1.0"
edition = "2024"
authors = ["Janus"]
description = "Sovereign biology engine for Quality-Diversity and Multi-Objective evolution."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/symbios-genetics"
keywords = [
    "simulation",
    "evolution",
    "quality-diversity",
    "genetic-algorithms",
]
categories = ["simulation", "algorithms"]

[dependencies]
rand = { version = "0.9", features = ["small_rng"] }
rand_pcg = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "algorithms"
harness = false

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
